--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,79 @@
+appdirs==1.4.4
+argon2-cffi==20.1.0
+astroid==2.4.2
+async-generator==1.10
+attrs==20.3.0
+backcall==0.2.0
+bleach==3.2.1
 Brotli==1.0.9
-certifi==2020.6.20
-chardet==3.0.4
+certifi==2020.12.5
+cffi==1.14.4
 click==7.1.2
 dash==1.18.1
 dash-core-components==1.14.1
 dash-html-components==1.1.1
 dash-renderer==1.8.3
 dash-table==4.11.1
+decorator==4.4.2
+defusedxml==0.6.0
+distlib==0.3.1
+entrypoints==0.3
+et-xmlfile==1.0.1
+filelock==3.0.12
 Flask==1.1.2
 Flask-Compress==1.8.0
 future==0.18.2
 gunicorn==20.0.4
-idna==2.9
+importlib-metadata==3.4.0
 itsdangerous==1.1.0
+jdcal==1.4.1
+jedi==0.18.0
 Jinja2==2.11.2
+jsonschema==3.2.0
+lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
-plotly==4.14.3
-requests==2.24.0
-retrying==1.3.3
-six==1.15.0
-urllib3==1.25.9
-Werkzeug==1.0.1
+mccabe==0.6.1
+mistune==0.8.4
+nbclient==0.5.1
+nbconvert==6.0.7
+nbformat==5.1.2
+nest-asyncio==1.4.3
+notebook==6.2.0
+numpy==1.19.5
+openpyxl==3.0.6
+packaging==20.8
 pandas==1.2.0
+pandocfilters==1.4.3
+parso==0.8.1
+pexpect==4.8.0
+pickleshare==0.7.5
+plotly==4.14.3
+prometheus-client==0.9.0
+prompt-toolkit==3.0.10
+ptyprocess==0.7.0
+pycparser==2.20
+Pygments==2.7.4
+pylint==2.6.0
+pyparsing==2.4.7
+pyrsistent==0.17.3
+python-dateutil==2.8.1
+pytz==2020.5
+pyzmq==21.0.1
+qtconsole==5.0.1
+QtPy==1.9.0
+retrying==1.3.3
+Send2Trash==1.5.0
+six==1.15.0
+terminado==0.9.2
+testpath==0.4.4
+toml==0.10.2
+tornado==6.1
+traitlets==5.0.5
+typed-ast==1.4.2
+wcwidth==0.2.5
+webencodings==0.5.1
+Werkzeug==1.0.1
+widgetsnbextension==3.5.1
+wrapt==1.12.1
+xlrd==2.0.1
+zipp==3.4.0
